# RainWarm

./: .gitignore  CNAME  README.md  bump-verion.cjs  components.d.ts  confirm.html  fix.sh  index.html  latest.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: page.yml  release.yml
.yarn/releases/: yarn-4.0.1.cjs
assets/: index-CuQxlaql.css
fltk/: Cargo.toml  readme.md
fltk/src/: get_sha256.rs  main.rs
src/: App.vue  main.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src/assets/css/: app.css  reset.css  styles.css
src/assets/svg/: Clip.vue
src/components/: FileTile.vue  FileTileTauri.vue  FileTileWeb.vue  TitleBar.vue
src/types/: index.ts
src/utils/: drag.ts  utils.ts
