[package]
version = "0.1.0"
name = "rainwarm"
description = "MD5 Checker"
authors = ["initialencounter <2911583893@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "macos-private-api", "system-tray", "api-all"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
webbrowser = "1.0.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
window-vibrancy = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
