[package]
version = "0.2.0"
name = "rainwarm"
description = "MD5 Checker"
authors = ["initialencounter <2911583893@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rainwarm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }


[dependencies]
tauri = { version = "2.0.0-beta", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
webbrowser = "1.0.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
window-vibrancy = "0.5.0"
blake2 = "0.11.0-pre.3"
hex = "0.4.3"
chrono = "0.4.38"
