[package]
version = "0.2.4"
name = "rainwarm"
description = "Blake2 Checker"
authors = ["initialencounter <2911583893@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rainwarm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }


[dependencies]
tauri = { version = "2.0.0-rc.0", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
blake2 = "0.11.0-pre.3"
hex = "0.4.3"
chrono = "0.4.38"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"
